<resources>
    <string name="app_name">EasyCryptSampleKotlin</string>
    <string name="app_title">EasyCrypt\ Sample</string>
    <string name="action_settings">Settings</string>

    <string name="tv_select_file_to">Select file to,</string>

    <string name="ed_text_input">Text input</string>
    <string name="ed_password">Password</string>

    <string name="button_hash">Hash</string>
    <string name="button_encrypt">Encrypt</string>
    <string name="button_decrypt">Decrypt</string>
    <string name="button_select_hash">Hash</string>
    <string name="button_select_encrypt">Encrypt</string>
    <string name="button_select_decrypt">Decrypt</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>

    <string name="success_result_to_file">Successfully saved result to file\n%s</string>

    <string name="title_permissions">Permissions</string>

    <string name="message_storage_permissions">Storage permission required to store output files.</string>
    <string name="message_camera_permissions">Camera permission required to scan input strings.</string>
    <string name="message_general_permissions">Permissions required for this app to run correctly.</string>

    <string name="ed_characters_to_use">Characters to use \(optional\)</string>
    <string name="button_true_random">True Random</string>
    <string name="button_pseudo_random">Pseudo Random</string>
    <string name="ed_length_of_password">Length of password</string>
    <string name="tv_generate_password_with">Generate password with,</string>
    <string name="title_string">String</string>
    <string name="title_file">File</string>
    <string name="title_password">Password</string>
    <string name="title_asymmetric">Asymmetric</string>
    <string name="rb_symmetric">Symmetric</string>
    <string name="rb_asymmetric">Asymmetric</string>
    <string name="button_sign">Sign</string>
    <string name="button_verify">Verify</string>
    <string name="msg_valid">Data verified. Valid.</string>
    <string name="msg_invalid">Cannot verify data. Invalid.</string>
    <string name="tv_password_strength_checker">Password Strength Checker</string>
    <string name="tv_password_key_generation">Password / key generation</string>
    <string name="tv_online_bf_time">Online brute-force time:\ </string>
    <string name="tv_offline_bf_time">Offline brute-force time:\ </string>
    <string name="tv_guesses">Guesses:\ </string>
    <string name="tv_guesses_log_10">Guesses Log 10:\ </string>
    <string name="tv_calc_time">Calc time:\ </string>
    <string name="tv_warning">Warning:\ </string>
    <string name="ivd_icon_for_cards">Icon for cards</string>
    <string name="btn_string">String</string>
    <string name="btn_file">File</string>
    <string name="tv_hash_algorithm">Hash algorithm:</string>
    <string name="tv_status">Status:\ </string>
    <string name="tv_status_idle">Idle</string>
    <string name="tv_status_encrypting">Encrypting ..</string>
    <string name="tv_status_decrypting">Decrypting ..</string>
    <string name="tv_status_hashing">Hashing ..</string>
    <string name="tv_status_signing">Signing ..</string>
    <string name="tv_status_verifying">Verifying ..</string>
    <string name="iv_expand_collapse_button">Expand / Collapse button</string>
    <string name="action_about">About</string>
    <string name="title_about">About</string>
    <string name="title_settings">Settings</string>
    <string name="title_camera">Camera</string>
    <string name="tv_secure_private_key">Secure private key</string>
    <string name="tv_public_key">Public key</string>
    <string name="tv_output">Output</string>
    <string name="pref_api_key">PREF_API_KEY</string>
    <string name="title_api_key">Random.org API Key</string>
    <string name="summary_not_set">Not set</string>
    <string name="summary_set">Set</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device does not support Camera2 API.</string>
    <string name="action_title_grant">Grant</string>
    <string name="camera_usage">Point towards text and tap on text box to use it as string input.</string>
    <string name="scanComingSoon">Scan text to %s, coming soon.</string>
    <string name="text_permissions_required">Permissions required for some functions.</string>

    <string-array name="hash_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

</resources>
